--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -15,7 +15,7 @@ COPY ./requirements.txt /requirements.txt
 COPY gprs2 /etc/chatscripts/
 COPY huawei /etc/ppp/peers/
 
-RUN pon huawei
+#RUN pon huawei
 
 # pip install python deps from requirements.txt on the resin.io build server
 RUN pip install -r /requirements.txt
