--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,6 +1,12 @@
 # base-image for python on any machine using a template variable,
 # see more about dockerfile templates here:http://docs.resin.io/pages/deployment/docker-templates
-FROM resin/%%RESIN_MACHINE_NAME%%-debian-python
+FROM resin/%%RESIN_MACHINE_NAME%%-python
+
+# Copy requirements.txt first for better cache on later pushes
+COPY gprs2 /etc/chatscripts/
+COPY huawei /etc/ppp/peers/
+
+#RUN pon huawei
 
 # use apt-get if you need to install dependencies
 RUN apt-get update && apt-get install -yq \
@@ -12,10 +18,10 @@ WORKDIR /usr/src/app
 
 # Copy requirements.txt first for better cache on later pushes
 COPY ./requirements.txt /requirements.txt
-COPY gprs2 /etc/chatscripts/
-COPY huawei /etc/ppp/peers/
+#COPY gprs2 /etc/chatscripts/
+#COPY huawei /etc/ppp/peers/
 
-RUN pon huawei
+#RUN pon huawei
 
 # pip install python deps from requirements.txt on the resin.io build server
 RUN pip install -r /requirements.txt
