--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,15 +2,9 @@
 # see more about dockerfile templates here:http://docs.resin.io/pages/deployment/docker-templates
 FROM resin/%%RESIN_MACHINE_NAME%%-python
 
-# Copy requirements.txt first for better cache on later pushes
-COPY gprs2 /etc/chatscripts/
-COPY huawei /etc/ppp/peers/
-
-#RUN pon huawei
-
 # use apt-get if you need to install dependencies
 RUN apt-get update && apt-get install -yq \
-		python-smbus && \
+		python-smbus ppp && \
 		apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set our working directory
@@ -18,8 +12,8 @@ WORKDIR /usr/src/app
 
 # Copy requirements.txt first for better cache on later pushes
 COPY ./requirements.txt /requirements.txt
-#COPY gprs2 /etc/chatscripts/
-#COPY huawei /etc/ppp/peers/
+COPY gprs2 /etc/chatscripts/
+COPY huawei /etc/ppp/peers/
 
 #RUN pon huawei
 
